/* Spanningen in et team */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -59,7 +59,7 @@ In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brands
 [[Bestaand:Podium_2007_USGP.jpg|duum|Hamilton up de höygste podiumplåtse nådat hy den Groute Prys van de Vereynigde Ståten van 2007 had ewönnen. Nevven hem ståt teammåt Fernando Alonso (links) en Felipe Massa (rechts).]]
 
 ===== Spanningen in et team =====
-Hamiltons lange betrekkinge med Dennis begön too verslechteren by de eyrste publike anwysing dat Hamilton üngelükkig was med et uptreden van et team nådat hy tweyds was geendigd in Monaco in 2007. Nå upmarkingen nå de race emåkt döär Hamilton dee suggerereden dat hy was verplicht üm in ne understüttende rolle too ryden, undersücht de FIA ov McLaren de reagels had ebrökken döär teamorders up too leggen. McLaren untkenden dübbelen werldkampioon Fernando Alonso too bevöärdelen en dårup sprak de FIA et team vry döär too stellen dat: "McLaren was in ståt ne optimåle teamstrategy nå too streaven ümdat sy nen substantieel vöärdeyl hadden boaven alle andere wågen. Sy hebbet niks edåne dat beskreven kan wörden as ingrypend in et resultåt van de race".
+Hamiltons lange betrekkinge med Dennis begön too verslechteren by de eyrste publike anwysing dat Hamilton üngelükkig was med et uptreden van et team nådat hy tweyds was geendigd in Monaco in 2007. Nå upmarkingen nå de race emåkt döär Hamilton dee suggerereden dat hy was verplicht üm in ne understüttende rolle too ryden, undersücht de FIA ov McLaren de reagels had ebrökken döär teamorders up too leggen. McLaren untkenden dübbelen werldkampioon Fernando Alonso too bevöärdelen en dårup sprak de FIA et team vry döär too stellen dat: "McLaren in ståt was ne optimåle teamstrategy nå too streaven ümdat sy nen substantieel vöärdeyl hadden boaven alle andere wågens. Sy hebbet niks edåne dat beskreven kan wörden as ingrypend in et resultåt van de race".
 
 Spanningen kwammen opny an de oppervlakte by de hongaarske Grand Prix van 2007. Tydens de låtste kwalifikatsysessy vöär de race wyr Hamilton in de pitstråte vertråged döär Alonso en düs neet in ståt den låtsten rundetyd vöär et ende van de sessy neader too setten. McLaren marketen up dat Hamilton neet had ehöyrsåmd an ne eyrdere instruksy üm Alonso too låten passeren uut angst üm syne eigene positsy too verleesen. Alonso wyr terügesettet når de sesde plåtse van et startvak, wårdöär  Hamilton stegen når de eyrste plåtse (hy was öärsprünkelik tweyds ewörden in de kwalifikatsy), terwyl McLaren pünten in et kampioonskap vöär konstrukteurs wyr avenömmen. Hamilton seiden dat hy den strav vöär Alonso <nowiki>''</nowiki>vry lichte" vunden en allenig möyte had med et verlees van pünten van den konstrukteur. Et wyr emelded dat Hamilton teagen Dennis eskolden had oaver den teamradio nå et incident. Et britske autosporttydskrivt ''Autosport'' beweren dat dit "dertoo leidden dat Dennis synen koptelefoon warpeden teagen de pitmüür in avgünst (nen gebår dat döär velen wyr miseinterpreteerd as ne reaksy up et verlees van de eyrste startplåtse van Alonso)".Skonwal brachteden McLaren låter nen bericht uut in nåme van Hamilton dat eynig üngewenst tålgebruuk untkenneden. Döär disse geböärtenissen storteden de betrekkinge tüsken Hamilton en Alonso tydelik in, wårby de twey neet med mekare spraaken vöär nen körten tyd. In de nåsleppe wyr emelded dat Hamilton benådered was döär Luca di Montezemolo vöär et ryden by Ferrari in 2008.
 
