--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -55,7 +55,7 @@ Hamilton wön den hongaarsken Grand Prix vanvav eyrste positsy nå ne twyvelacht
 
 In den brasiliaansken Grand Prix endigen Hamilton seavendes en wön Räikkönen, wat beteakenden dat Hamilton tweyds wyr in et kampioonskap med eyn pünt verskil. In de eyrste runde wyr Hamilton vöärbyereden döär meyrdere wågens en vyl terüg når de achtste plåtse; acht runden låter kön hy neet skakelen når ne versnelling en blev 40 sekonden stån. Hy herstelleden sich når de seavende plåtse mår  Ferrari had öär twey koureurs ümewisseld sodat Räikkönen vöär et kampioonskap kön gån. Hamilton pakkeden et rekord van des werlds jüngeste individuele tweyde plåtse in et kampioonskap, med 22 jåren en 287 dågen, dårvöär sinds 1960 in handen van Bruce McLaren med 23 jåren en 5 dågen; et rekord van Hamilton is undertüsken verbrökken döär Sebastian Vettel in 2009.
 
-In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brandstovsjuumel; de BMWkoureurs waren vyvdes en sesdes geendigd en as sy uut den uutslag ehåled wyren, wårdöär Hamilton når de vyvde plåtse epromoveerd wördet, wön hy et werldkampioonskap med eyn pünt vöär Räikkönen. Uutendelik wyren beide teams neet estravd; McLaren ging in houger beroop. Hamilton vertelleden de BBC vervölgens dat hy de F1-titel neet winnen wül döär de kwalifikatsys van andere koureurs.
+In oktober begön de FIA nen undersuuk når BMW Sauber en Williams vöär brandstovsjuumel; de BMWkoureurs waren vyvdes en sesdes geendigd en as sy uut den uutslag ehåled wyren, wårdöär Hamilton når de vyvde plåtse epromoveerd wördet, wön hy et werldkampioonskap med eyn pünt vöär Räikkönen. Uutendelik wyren beide teams neet estravd; McLaren ging in höyger beroop. Hamilton vertelleden de BBC vervölgens dat hy de F1-titel neet winnen wül döär de kwalifikatsys van andere koureurs.
 [[Bestaand:Podium_2007_USGP.jpg|duum|Hamilton up de höygste podiumplåtse nådat hy den Grouten Prys van de Vereynigde Ståten van 2007 had ewönnen. Nevven hem ståt teammåt Fernando Alonso (links) en Felipe Massa (rechts).]]
 
 ===== Spanningen in et team =====
