--- a/Sney.mw
+++ b/Sney.mw
@@ -17,7 +17,9 @@ Snee veroorzaak de grootste preblemen as de neerslag vuilt bie [[vors (neerslag)
 * [[Achterhooks]]: ''snee(j)'',  sneejn = sneeuwen (nl)
 * [[Drèents]]: ''snaai'' of ''snei''
 * [[Grunnegs]]: ''snij'', ''snèj''
+* [[Sallaans]]: ''snee(j)'', ''sni-j''
 * [[Stellingwarfs]]: ''sni'j''
+* [[Tweants]]: ''snie(j)''
 * [[Urkers]]: ''snijacht''
 * [[Veluws]]: 
 ** ''snee'' 
