*Empty MediaWiki Message*

--- a/Sney.mw
+++ b/Sney.mw
@@ -20,7 +20,7 @@ Snee veroorzaak de grootste preblemen as de neerslag vuilt bie [[vors (neerslag)
 * [[Sallaans]]: ''snee(j)'', ''sni-j''
 * [[Stellingwarfs]]: ''sni'j''
 * [[Tweants]]: ''snie(j)''
-* [[Urkers]]: ''snijacht''
+* [[Urkers]]: ''snij''
 * [[Veluws]]: 
 ** ''snee'' 
 ** ''snei''
