--- a/Sney.mw
+++ b/Sney.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Agathabergwinter.jpg|250px|thumb|Snee in een weilaand]]
-[[Bestaand:Snow Scene at Shipka Pass 1.JPG|250px|thumb|Snee in de bomen]]
-[[Bestaand:Sneeuwschuiver.jpg|thumb|right|255px|Sneeschuver]]
-'''Snee''' is een vorm van [[neerslag]] dat besteet uut [[ieskristal]]len. Snee kump in [[Nederlaand]] neet zo heel vake veur. Der vuilt gemiddeld op ongeveer dartig dagen per jaor snee, mar heel wat jaoren gaon veurbie zonder dat der veule snee vuilt. In [[Noord-Europa]] vuilt der altied veul meer snee en over een langere tied.
+[[Bestaand:Snow Scene at Shipka Pass 1.JPG|250px|thumb|Sney in de boumen]]
+[[Bestaand:Sneeuwschuiver.jpg|thumb|right|255px|Sneyskuver]]
+'''Sney''' is een förm van [[neerslag|neaderslag]] dat besteyt uut [[ieskristal|yskristallen]]. Sney kümt in [[Nederlaand|Neaderland]] neet so heyl vake in vöär. Der vôylt emiddeld up ungevear dartig dagen de jår snee, mar heyl wat jåren gåt vöärby sunder dat der vöäle sney vöylt. In [[Noord-Europa]] vöylt der altyd vöäl meyr sney en oaver een langere tyd.
 
 == Ontstaon ==
 As de [[temperetuur]] vlogge onder 't vriespunt geet, veraanderen de piepkleine [[waoter]]druppels van de wolken in hele fiene iesnaoldjes. As disse naoldjes ummeneervallen dan blieven ze kleven an stofdeeltjes (zaandkorrels, reuk- of asdeeltjes) dee in de luch zweven. Hierdeur vormen kristallen, sneesteerns. Disse steerns kunnen verschillende vormen hemmen, mar ze bin altied zespuntig.
