*Empty MediaWiki Message*

--- a/Sney.mw
+++ b/Sney.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Agathabergwinter.jpg|250px|thumb|Snee in een weilaand]]
+[[Bestaand:Agathabergwinter.jpg|250px|thumb|Sney in een weiland]]
 [[Bestaand:Snow Scene at Shipka Pass 1.JPG|250px|thumb|Sney in de boumen]]
 [[Bestaand:Sneeuwschuiver.jpg|thumb|right|255px|Sneyskuver]]
 '''Sney''' is een förm van [[neerslag|neaderslag]] dat besteyt uut [[ieskristal|yskristallen]]. Sney kümt in [[Nederlaand|Neaderland]] neet so heyl vake in vöär. Der vôylt emiddeld up ungevear dartig dagen de jår snee, mar heyl wat jåren gåt vöärby sunder dat der vöäle sney vöylt. In [[Noord-Europa]] vöylt der altyd vöäl meyr sney en oaver een langere tyd.
