*Empty MediaWiki Message*

--- a/Sney.mw
+++ b/Sney.mw
@@ -3,10 +3,10 @@
 [[Bestaand:Sneeuwschuiver.jpg|thumb|right|255px|Sneyskuver]]
 '''Sney''' is een förm van [[neerslag|neaderslag]] dat besteyt uut [[ieskristal|yskristallen]]. Sney kümt in [[Nederlaand|Neaderland]] neet so heyl vake in vöär. Der vöylt emiddeld up ungevear dartig dagen de jår snee, mar heyl wat jåren gåt vöärby sunder dat der vöäle sney vöylt. In [[Noord-Europa]] vöylt der altyd vöäl meyr sney en oaver een langere tyd.
 
-== Ontstaon ==
-As de [[temperetuur]] vlogge onder 't vriespunt geet, veraanderen de piepkleine [[waoter]]druppels van de wolken in hele fiene iesnaoldjes. As disse naoldjes ummeneervallen dan blieven ze kleven an stofdeeltjes (zaandkorrels, reuk- of asdeeltjes) dee in de luch zweven. Hierdeur vormen kristallen, sneesteerns. Disse steerns kunnen verschillende vormen hemmen, mar ze bin altied zespuntig.
+== Untstån ==
+As de [[temperatuur]] vlügge under et vreespünt geyt, veranderen de peepkleine [[waoter|water]]droppels van de wolken in heyle ftne ysnöäldjens. As disse nöäldjens ümmeneadervallet dan blyvet se kleaven an stofdealtjens (sandkorrels, röäk- of asdeyltjens) dee in de lücht sweaver. Hyrdöär förmet kristallen, sneystearns. Disse stearns künnet verskillende förmen hebben, mar se binnen altyd sespüntig.
 
-As 't weit, klitten de sneesteerns op weg naor de [[eerde]] samen en vormen een vlokke. Zo'n vlokke besteet uut wat ies en iezelig veule luch tussen de iesnaoldjes. Je kunnen 't zien as een [[kussing|kussen]] vol veren mit luch dertussen. Vlokken bin onregelmaotig, klein of groot, mar as 't wiendstille is, dwarrelen ze zeutjes an ummeneer.
+As et wäit, klittet de sneystearns up weg når de [[eerde|aerde]] samen en förmen een vlokke. So een vlokke besteyt uut wat ts en yselig vöäle lücht tüsken de ysnöäldjens. Y künnen et seen as een [[kussing|küssen]] vol vearen mid lücht dertüsken. Vlokken binnen unreagelmåtig, klein of groyt, mar as et windstille is, dwarrelet se süütjens an ümmeneader.
 
 == Overlas ==
 Snee kan veur heel wat overlas zörgen neet allinnig deur gladheid mar veural bie natte snee kan 't oek veur vermindering van 't zich zörgen. Bie zwaore sneeval is 't zich minder as 500 meter, vergeliekbaor mit [[mis]]. Veural de eerste snee van 't seizoen of blotse sneebujen leveren preblemen op. Bie periodes mit herhaoldelijke snee en wienterse bujen is de weggebruker deran ewend en pas 't verkeer zich an.
