--- a/Sney.mw
+++ b/Sney.mw
@@ -4,9 +4,9 @@
 '''Sney''' is een förm van [[neerslag|neaderslag]] dat besteyt uut [[ieskristal|yskristallen]]. Sney kümt in [[Nederlaand|Neaderland]] neet so heyl vake in vöär. Der vöylt emiddeld up ungevear dartig dagen de jår snee, mar heyl wat jåren gåt vöärby sunder dat der vöäle sney vöylt. In [[Noord-Europa]] vöylt der altyd vöäl meyr sney en oaver een langere tyd.
 
 == Untstån ==
-As de [[temperatuur]] vlügge under et vreespünt geyt, veranderen de peepkleine [[waoter|water]]droppels van de wolken in heyle ftne ysnöäldjens. As disse nöäldjens ümmeneadervallet dan blyvet se kleaven an stofdealtjens (sandkorrels, röäk- of asdeyltjens) dee in de lücht sweaver. Hyrdöär förmet kristallen, sneystearns. Disse stearns künnet verskillende förmen hebben, mar se binnen altyd sespüntig.
+As de [[temperatuur]] vlügge under et vreespünt geyt, veranderen de pypkleine [[waoter|water]]droppels van de wolken in heyle fyne ysnöäldjens. As disse nöäldjens ümmeneadervallet dan blyvet se kleaven an stofdealtjens (sandkorrels, röäk- of asdeyltjens) dee in de lücht sweaver. Hyrdöär förmet kristallen, sneystearns. Disse stearns künnet verskillende förmen hebben, mar se binnen altyd sespüntig.
 
-As et wäit, klittet de sneystearns up weg når de [[eerde|aerde]] samen en förmen een vlokke. So een vlokke besteyt uut wat ts en yselig vöäle lücht tüsken de ysnöäldjens. Y künnen et seen as een [[kussing|küssen]] vol vearen mid lücht dertüsken. Vlokken binnen unreagelmåtig, klein of groyt, mar as et windstille is, dwarrelet se süütjens an ümmeneader.
+As et wäit, klittet de sneystearns up weg når de [[eerde|aerde]] samen en förmen een vlokke. So een vlokke besteyt uut wat ts en yselig vöäle lücht tüsken de ysnöäldjens. Y künnen et seen as een [[kussing|küssen]] vol vearen mid lücht dertüsken. Vlokken binnen unreagelmåtig, klein of groyt, mar as et windstille is, dwarrelet se söötjens an ümmeneader.
 
 == Overlas ==
 Snee kan veur heel wat overlas zörgen neet allinnig deur gladheid mar veural bie natte snee kan 't oek veur vermindering van 't zich zörgen. Bie zwaore sneeval is 't zich minder as 500 meter, vergeliekbaor mit [[mis]]. Veural de eerste snee van 't seizoen of blotse sneebujen leveren preblemen op. Bie periodes mit herhaoldelijke snee en wienterse bujen is de weggebruker deran ewend en pas 't verkeer zich an.
