*Empty MediaWiki Message*

--- a/Sney.mw
+++ b/Sney.mw
@@ -8,10 +8,10 @@ As de [[temperatuur]] vlügge under et vreespünt geyt, veranderen de pypkleine 
 
 As et wäit, klittet de sneystearns up weg når de [[eerde|aerde]] samen en förmen een vlokke. So een vlokke besteyt uut wat ts en yselig vöäle lücht tüsken de ysnöäldjens. Y künnen et seen as een [[kussing|küssen]] vol vearen mid lücht dertüsken. Vlokken binnen unreagelmåtig, klein of groyt, mar as et windstille is, dwarrelet se söötjens an ümmeneader.
 
-== Overlas ==
-Snee kan veur heel wat overlas zörgen neet allinnig deur gladheid mar veural bie natte snee kan 't oek veur vermindering van 't zich zörgen. Bie zwaore sneeval is 't zich minder as 500 meter, vergeliekbaor mit [[mis]]. Veural de eerste snee van 't seizoen of blotse sneebujen leveren preblemen op. Bie periodes mit herhaoldelijke snee en wienterse bujen is de weggebruker deran ewend en pas 't verkeer zich an.
+== Oaverlast ==
+Sney kan vöär heyl wat oaverlast sörgen neet alleynig döär gladheid mar vöäral by natte sney kan et ouk vöär vermindering van et sicht sörgen. By swåre sneyval is et sicht minder as 500 meater, vergelykbår mid [[mis|mist]]. Vöäral de eyrste sney van et seisoon of blotske sneybüien leaveret problemen up. By periodes mid herholdelike sney en winterske büien is de weggebruker der an ewend en pas et verkeer sik an.
 
-Snee veroorzaak de grootste preblemen as de neerslag vuilt bie [[vors (neerslag)|vors]], veural bie maotige tot strenge vors. As 't dan oek hard geet weien, stuuf de snee op en ontstaon der [[sneedune]]n. As der snee verwach wönnen bie wiendkrach zesse of zeuvene geef 't [[KNMI]] een weeralarm uut veur [[sneejach]]. Bie wiendkrach achte of meer en snee geldt een weeralarm veur een [[sneestörm]]. Oek bie anhouwende zwaore sneeval mit op grote schaole meer as vuuf centimeter per ure en een varse sneelage van te minsen 5,5 centimeter wönnen een [[weeralarm]] uut-egeven. Dit is gevaorlijk veur 't verkeer en is tot grote overlas. Snee zelf is neet glad, mar wönnen deur 't verkeer tot glad ies erejen. Snee ku-j vorthaolen mit een [[sneeschuppe]] of op grote schaole mit een [[sneeschuver]] of deur 't struien van [[zout]].
+Sney veroorsaakt de groutste problemen as de neaderslag vöylt by [[vors (neerslag)|vorst]], vöäral by måtige töt strenge vorst. As et dan ouk hard geet wäien, stuuvt de sney up en untståt der [[sneedune|sneydünen]]. As der sney verwachet wörden by windkracht sesse of söävene geavt et [[KNMI]] een weaderalarm uut vöär [[sneejach|sneyjacht]]. By windkracht achte of meyr en sney geldt een weaderalarm vöär een [[sneestörm|sneystorm]]. Ouk by anholdende swåre sneyval mid up groure skåle meyr as vyv centimeater de ure en een varske sneylåge van te minsten vyv en een halve centimeater wörden een [[weeralarm|weaderalarm]] uut-egeaven. Dit is gevårlik vöär et verkeyr en is tot groute oaverlast. Sney self is neet glad, mar wörden deur 't verkeer tot glad ies erejen. Snee ku-j vorthaolen mit een [[sneeschuppe]] of op grote schaole mit een [[sneeschuver]] of deur 't struien van [[zout]].
 
 == [[Nedersaksisch]] ==
 * [[Achterhooks]]: ''snee(j)'',  sneejn = sneeuwen (nl)
