--- a/Sney.mw
+++ b/Sney.mw
@@ -11,7 +11,7 @@ As et wäit, klittet de sneystearns up weg når de [[eerde|aerde]] samen en för
 == Oaverlast ==
 Sney kan vöär heyl wat oaverlast sörgen neet alleynig döär gladheid mar vöäral by natte sney kan et ouk vöär vermindering van et sicht sörgen. By swåre sneyval is et sicht minder as 500 meater, vergelykbår mid [[mis|mist]]. Vöäral de eyrste sney van et seisoon of blotske sneybüien leaveret problemen up. By periodes mid herholdelike sney en winterske büien is de weggebruker der an ewend en pas et verkeer sik an.
 
-Sney veroorsaakt de groutste problemen as de neaderslag vöylt by [[vors (neerslag)|vorst]], vöäral by måtige töt strenge vorst. As et dan ouk hard geet wäien, stuuvt de sney up en untståt der [[sneedune|sneydünen]]. As der sney verwachet wörden by windkracht sesse of söävene geavt et [[KNMI]] een weaderalarm uut vöär [[sneejach|sneyjacht]]. By windkracht achte of meyr en sney geldt een weaderalarm vöär een [[sneestörm|sneystorm]]. Ouk by anholdende swåre sneyval mid up groure skåle meyr as vyv centimeater de ure en een varske sneylåge van te minsten vyv en een halve centimeater wörden een [[weeralarm|weaderalarm]] uut-egeaven. Dit is gevårlik vöär et verkeyr en is tot groute oaverlast. Sney self is neet glad, mar wörden deur 't verkeer tot glad ies erejen. Snee ku-j vorthaolen mit een [[sneeschuppe]] of op grote schaole mit een [[sneeschuver]] of deur 't struien van [[zout]].
+Sney veroorsaakt de groutste problemen as de neaderslag vöylt by [[vors (neerslag)|vorst]], vöäral by måtige töt strenge vorst. As et dan ouk hard geet wäien, stuuvt de sney up en untståt der [[sneedune|sneydünen]]. As der sney verwachet wörden by windkracht sesse of söävene geavt et [[KNMI]] een weaderalarm uut vöär [[sneejach|sneyjacht]]. By windkracht achte of meyr en sney geldt een weaderalarm vöär een [[sneestörm|sneystorm]]. Ouk by anholdende swåre sneyval mid up groute skåle meyr as vyv centimeater de ure en een varske sneylåge van te minsten vyv en een halve centimeater wörden een [[weeralarm|weaderalarm]] uut-egeaven. Dit is gevårlik vöär et verkeyr en is tot groute oaverlast. Sney self is neet glad, mar wörden döär et verkeyr töt glad ys ereyden. Sney kün y vordhalen mid een [[sneeschuppe|sneysküppe]] of up groyte skåle mid een [[sneeschuver|sneyskuver]] of döär et ströien van [[zout|solt]].
 
 == [[Nedersaksisch]] ==
 * [[Achterhooks]]: ''snee(j)'',  sneejn = sneeuwen (nl)
