--- a/Sney.mw
+++ b/Sney.mw
@@ -13,15 +13,15 @@ Sney kan vöär heyl wat oaverlast sörgen neet alleynig döär gladheid mar vö
 
 Sney veroorsaakt de groutste problemen as de neaderslag vöylt by [[vors (neerslag)|vorst]], vöäral by måtige töt strenge vorst. As et dan ouk hard geet wäien, stuuvt de sney up en untståt der [[sneedune|sneydünen]]. As der sney verwachet wörden by windkracht sesse of söävene geavt et [[KNMI]] een weaderalarm uut vöär [[sneejach|sneyjacht]]. By windkracht achte of meyr en sney geldt een weaderalarm vöär een [[sneestörm|sneystorm]]. Ouk by anholdende swåre sneyval mid up groute skåle meyr as vyv centimeater de ure en een varske sneylåge van te minsten vyv en een halve centimeater wörden een [[weeralarm|weaderalarm]] uut-egeaven. Dit is gevårlik vöär et verkeyr en is tot groute oaverlast. Sney self is neet glad, mar wörden döär et verkeyr töt glad ys ereyden. Sney kün y vordhalen mid een [[sneeschuppe|sneysküppe]] of up groyte skåle mid een [[sneeschuver|sneyskuver]] of döär et ströien van [[zout|solt]].
 
-== [[Nedersaksisch]] ==
-* [[Achterhooks]]: ''snee(j)'',  sneejn = sneeuwen (nl)
-* [[Drèents]]: ''snaai'' of ''snei''
-* [[Grunnegs]]: ''snij'', ''snèj''
-* [[Sallaans]]: ''snee(j)'', ''sni-j''
-* [[Stellingwarfs]]: ''sni'j''
-* [[Tweants]]: ''snie(j)''
-* [[Urkers]]: ''snij''
-* [[Veluws]]: 
+== [[Nedersaksisch|Neadersassisk]] ==
+* [[Achterhooks|Achterhooksk]]: ''snee(j)'',  sneejn = sneeuwen (nl)
+* [[Drèents|Drentsk]]: ''snaai'' of ''snei''
+* [[Grunnegs|Gröningsk]]: ''snij'', ''snèj''
+* [[Sallaans|Sallandsl]]: ''snee(j)'', ''sni-j''
+* [[Stellingwarfs|Stellingwarfsk]]: ''sni'j''
+* [[Tweants|Twentsk]]: ''snie(j)''
+* [[Urkers|Ürkersk]]: ''snij''
+* [[Veluws|Velüwsk]]: 
 ** ''snee'' 
 ** ''snei''
 ** ''sneeuw''
