--- a/Sney.mw
+++ b/Sney.mw
@@ -17,7 +17,7 @@ Sney veroorsaakt de groutste problemen as de neaderslag vöylt by [[vors (neersl
 * [[Achterhooks|Achterhooksk]]: ''snee(j)'',  sneejn = sneeuwen (nl)
 * [[Drèents|Drentsk]]: ''snaai'' of ''snei''
 * [[Grunnegs|Gröningsk]]: ''snij'', ''snèj''
-* [[Sallaans|Sallandsl]]: ''snee(j)'', ''sni-j''
+* [[Sallaans|Sallandsk]]: ''snee(j)'', ''sni-j''
 * [[Stellingwarfs|Stellingwarfsk]]: ''sni'j''
 * [[Tweants|Twentsk]]: ''snie(j)''
 * [[Urkers|Ürkersk]]: ''snij''
