[[Marianna_Madia_daticamera.jpg]] is vervungen deur [[Marianna_Madia_daticamera_2013.jpg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR2|Criterion 2]] (meaningless or ambiguous

--- a/Marianna_Madia.mw
+++ b/Marianna_Madia.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Marianna Madia daticamera.jpg|thumb|240px|Marianna Madia]]
+[[Ofbeelding:Marianna Madia daticamera 2013.jpg|thumb|240px|Marianna Madia]]
 
 '''Marianna Maadia''' ([[Rome]], [[5 september]] [[1980]]) is ne Italiaanse politika, lid van t Italiaanse Hoes van Af-evaordigden (te vergelieken met den Tweeden Kamer) veur de Demokratiese Parti'je sund 2008. Op [[21 jannewaori]] [[2014]] wier ze minister van Ambtenarenzaken en Bestuursvereenvoldiging<ref>[http://www.bbc.co.uk/news/world-europe-26298038 «Italy's PM-designate Matteo Renzi names new cabinet»]</ref>. 
 
