--- a/De_Pekel.mw
+++ b/De_Pekel.mw
@@ -1,3 +1,29 @@
+{{Gemeynde |
+name = De Pekel |
+lokaty = Locatie Pekela |
+bestandsname vlagge = Pekela vlag.svg |
+bestandsname wåpen = Coat_of_arms_of_Pekela.png |
+provincy = [[Grunnen (provìnzie)|Grunnen]] |
+höyvdplaatse = [[Olde Pekel]] |  
+uppervlakde = 50,20 |
+uppervlakde land = 49,12 |
+uppervlakde water = 1,08 |
+inwoaner = 13.277 |
+dåtum inwoaner = 1 juli 2006 |
+dichtde = 270 |
+breyddegråd = 53/06/0/N |
+längdegråd = 7/0/0/E |
+weagen = N366, N367 |
+netnummer = 0597, 0599 |
+postkode = 9662-9669 |
+websteade = [http://www.pekela.nl www.pekela.nl] |
+}}
+'''De Pekel''' ([[Nederlaands]]: ''Pekela'') is n gemainte in Noord-[[Nederlaand]], in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte het n oppervlakte van 50,22 [[vierkaante kilometer|km²]] en har op [[1 juli]] [[2006]] 13.277 inwoner (bron: CBS). De Pekel is ontstoan deur de soamenvougen van [[Olle Pekel]] en [[Nij Pekel]] per [[1 jannewaori|1 jannewoari]] [[1990]].
+
+== Indailen ==
+De gemainte De Pekel bestaait oet de volgende ploatsen en gehuchten: [[Alteveer]] gedailtelk, [[Boven Pekel]], [[Bronsveen]], [[Hoetmansmeer]], [[Nij Pekel]] en [[Olle Pekel]].
+
+{{GemaintesGrunnen}}
+
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Gemainte in Grunnen]]
-hyrwunnnen dommem mensen
