--- a/Ishmael_(roman).mw
+++ b/Ishmael_(roman).mw
@@ -5,15 +5,15 @@ Et book undersöcht de [[mythologie|mytology]] van volker en deylt et up een ege
 Et wördden bekroand med de $500.000 Turner Morgen Fellowship Award.
 
 ==Körte inhold==
-Et book leas y vanuut de höyvdpersone, eyne sunder name mar et wörd in de ik-förme eleasen. Dit sodat et dan lekt as of et ysülv sollen weasen. Et begünt med dat he een krantenbericht lest wårin steyt dat der eyne een leyrling söcht. Kümt he dår, blekt de leyraar een gorilla te weasen. Disse gorilla het Ismaël. Nå een set verbouwereard te weasen gevt he mar to, en Ismaël geyt syn teorye an hüm uut doon. Hy gevt lesse oaver de geskydenisse van mensken. Volgens hüm bint mensken an de gang de wearld an et kapot te maken. Vrogger, toon de meyste mensken noch [[Jager-verzamelaar|jager-gadderaars]] waren, was de menske noch van de wearld. Mar nu as de meysten [[laandbouw|landbouwer]] ewörden bint hebbet sy een ekonomy upeset, een ekonomy van meyr pakken dan watte wy nöydig bint. Ismaël düt hyr een lyne tüsken mensken: de Nemmers ('beskaavden') en de Låters ('primityven'). De Nemmers bint de mensken dee as landbouw bint gån doon en verdan egåne bint med et untwikkelen van ear ekonomy, en op disse wyse teagen de wearld in gåt. De Låters bint de volker dee ebleyven bint so as mensken vanof et begün an ewesd bint. Sy hebbet sich neet boaven andere deren uut låten gån en bint blyven leaven so as et de wearld geyn skaa gevt. 
+Et book leas y vanuut de höyvdpersone, eyne sunder name mar et wörd in de ik-förme eleasen. Dit sodat et dan lekt as of et ysülv sollen weasen. Et begünt med dat he een krantenbericht lest wårin steyt dat der eyne een leyrling söcht. Kümt he dår, blekt de leyraar een gorilla te weasen. Disse gorilla het Ismaël. Nå een set verbouwereyrd te weasen gevt hee mar to, en Ismaël geyt syn teorye an hüm uut de döke doon. Hy gevt lesse oaver de geskydenisse van mensken. Volgens hüm bint mensken an de gang de wearld an et kapot te maken. Vrogger, toon de meyste mensken noch [[Jager-verzamelaar|jager-gadderaars]] waren, was de menske noch van de wearld. Mar nu as de meysten [[laandbouw|landbouwer]] ewörden bint hebbet sy een ekonomy upeset, een ekonomy van meyr gråpen dan watte wy nöydig bint. Ismaël düt hyr een lyne tüsken mensken: de Nemmers ('beskaavden') en de Låters ('primityven'). De Nemmers bint de mensken dee as landbouw bint gån doon en verdan egåne bint med et untwikkelen van ear ekonomy, en op disse wyse teagen de wearld in gåt. De Låters bint de volker dee ebleyven bint so as mensken vanof et begün an ewesd hebbet. Sy hebbet sich neet boaven andere deren uut låten gån en bint blyven leaven so as et de wearld geyn skaa gevt. 
 
 citaten kumt uut et book vord: 
 * De Nemmers:
-''By et vertelligy van de Nemmers draeit et der ümme dat de wearld van de menske is.'' 
+''By et vertelligy van de Nemmers dräit et der ümme dat de wearld van de menske is.'' 
 * De Låters:
-''By et vertelligy van de Låters draeit et der ümme dat mensken van de weerld bint.''
+''By et vertelligy van de Låters dräit et der ümme dat mensken van de weerld bint.''
 
-Daniel Quinn düt ouk noch et genesisverhaal uutleggen so as hy dat söt. En hy düt een bülte probleymen in syn wark kummen, wat een menske uutricht, mar hy kümt ouk wear med een uplössing. Hy hevt et book so eskreaven dat et u wal an et prakkisdenken an set.
+Daniel Quinn düt ouk noch et genesisverhaal uutleggen so as hy dat söt. En hy düt een bülte probleymen in syn wark kummen, wat een menske uutricht, mar hy kümt ouk wear med een uplössing. Hy hevt et book so eskreaven dat et u wal an et prakkidenken an set.
 
 ==Wette van beparkte meddinging==
 Ismaël löt syn leyrling een koppel dagen prakkidenken oaver een wette dee de Nemmers oavertreyd, een wette de wal nå eleavd wörd döär de Låters-volker (en alle andere deren). Dan kümt de leerling med dree dinge ansetten wat de Nemmers wál doot, mar de Låters neet. 
