--- a/Ishmael_(roman).mw
+++ b/Ishmael_(roman).mw
@@ -16,7 +16,7 @@ citaten kumt uut et book vord:
 Daniel Quinn düt ouk noch et genesisverhaal uutleggen so as hy dat söt. En hy düt een bülte probleymen in syn wark kummen, wat een menske uutricht, mar hy kümt ouk wear med een uplössing. Hy hevt et book so eskreaven dat et u wal an et prakkidenken an set.
 
 ==Wette van beparkte meddinging==
-Ismaël löt syn leyrling een koppel dagen prakkidenken oaver een wette dee de Nemmers oavertreyd, een wette de wal nå eleavd wörd döär de Låters-volker (en alle andere deren). Dan kümt de leerling med dree dinge ansetten wat de Nemmers wál doot, mar de Låters neet. 
+Ismaël löt syn leyrling een koppel dagen prakkidenken oaver een wette dee de Nemmers oavertread, een wette de wal nå eleavd wörd döär de Låters-volker (en alle andere deren). Dan kümt de leyrling med dree dinge ansetten wat de Nemmers wál doot, mar de Låters neet. 
 
 Din gevt een name an disse (natuur)wette:
 
@@ -24,11 +24,11 @@ Din gevt een name an disse (natuur)wette:
 
 En dee wette wörd upedeyld in dree reagels:
 
-*> Uwen meddingers uutrööien, dat doo'y neet.
+*> Uwen meddingers uutröien, dat doo'y neet.
 *> Al et etten op de wearld as de uwende nemmen, dat doo'y neet.
 *> Nem alleyne wat y nöydig bint, de rest låt y.
 
-De strav op et oavertreyden van disse wette is: uutstarven. Ümdat de evoluty alleyne vöär een soorte verdan geyt as disse in vreade levt blevt med syn ümgeaving.
+De strav up et oavertreaden van disse wette is: uutstarven. Ümdat de evoluty alleyne vöär een soorte verdan geyt as disse in vreade levt blevt med syn ümgeaving.
 
 ==film==
 In 1999 is de film [[Instinct (film)|Instinct]] uutekummen, med [[Antony Hopkins]] as höyvdrolspöäler. Disse film is ebasseard up dit book.
