*Empty MediaWiki Message*

--- a/Leavensboom.mw
+++ b/Leavensboom.mw
@@ -1,6 +1,6 @@
-De '''Leavensboum''', of '''Werldboum''', is een idey wat wy so beaty oaveral op de wearld vindet. Bynå in alle kulturen heb y der wal een skematiske wearldkyk by med een groute boum. De bekensten sol wal de Leavensboum uut de [[Biebel|bybel]] weasen, wår as Adam en Eva een vrücht van vreaten, en so, volgens de [[kristenen]], et kwåd de wearld in hülpten.
+De '''Leavensboum''', of '''Wearldboum''', is een idey wat wy so beatyn oaveral up de wearld vindet. Bynå in alle kulturen heb y der wal een skematiske wearldkyk by med een grouten boum. De bekensten sol wal de Leavensboum uut de [[Biebel|Bybel]] weasen, wår as Adam en Eva een vrücht van vreaten, en so, volgens de [[kristenen]], et kwåd de wearld in hülpten.
 
-Een andere is de [[Jegdrasiel|yggdrasil]] of de [[Irminsul|irminsûl]] uut de germaanske oldheid. Dissend was de wearldboum wår in as alle neagen wearlden med verbünden is. In de wörtels had y de underwearld en de leavensbrunne, en oaver verskillende takken de andere goaden- en geystenwearlden verdealet. Disse boum wörd vöär-esteld as een dennenboum, ümdat den in alle jårtyden altyd gröön blevt.
+Een andere is de [[Jegdrasiel|yggdrasil]] of de [[Irminsul|irminsûl]] uut de germaanske oldheid. Dissend was de wearldboum wår in as alle neagen wearlden med verbünden is. In de wörtels had y de underwearld en de leavensbrunne, en oaver verskillende takken de andere goden- en geystenwearlden verdealet. Dissen boum wörd vöär-esteld as een dennenboum, ümdat den in alle jårtyden altyd gröön blevt.
 
 {{Dialekt|sdz}}
 [[Kategorie:Mythologie]]
