--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -1,16 +1,16 @@
-Di's 'n lieste met min of meer bekende filesofen deur de eeuwen hen. 'n Filesoof (ok wel 'maot van 't wieze' enuumd) is 'n persone die de studie van de [[filesofie]] beuufend, as beroep of aanderszins. Disse lieste is in edeeld as:
+Dit is een lyste mes min of meyr bekende filesofen döär de eywen hean. Nen filesoof (ouk wel 'måt van et wysen' enöönd) is ne persone dee de study van de [[filesofie|filosofy]] düt, as beroop of anders. Disse lyste is up edealed as:
 
 <div class="toccolours">
 :'''Inholdsopgave'''
 # [[#Filesofen uut de Oldheid|Filesofen uut de Oldheid]]
-# [[#Filesofen uut de Middeleeuwen|Filesofen uut de Middeleeuwen]]
-# [[#Filesofen van de Moderne Tied|Filesofen van de Moderne Tied]]
-## [[#De Filesofen uut de Renaissance (15e en 16e eeuwe)|De filesofen uut de Renaissance (15e en 16e eeuwe)]]
-## [[#De Verlichingsfilesofen (17e en 18e eeuwe)|De Verlichingsfilesofen (17e en 18e eeuwe)]]
-## [[#Filesofen uut de 19e eeuwe|Filesofen uut de 19e eeuwe]]
-# [[#Hedendaagse filesofen|Hedendaagse filesofen]]
-## [[#20e-eeuwse filesofen|20e-eeuwse filesofen]]
-## [[#21e-eeuwse filesofen|21e-eeuwse filesofen]]
+# [[#Filesofen uut de Middeleeuwen|Filesofen uut de Middeleywen]]
+# [[#Filesofen van de Moderne Tied|Filesofen van de Moderne Tyd]]
+## [[#De Filesofen uut de Renaissance (15e en 16e eeuwe)|De filesofen uut de Renaissance (15. en 16. eywe)]]
+## [[#De Verlichingsfilesofen (17e en 18e eeuwe)|De Verlichingsfilesofen (17. en 18. eywe)]]
+## [[#Filesofen uut de 19e eeuwe|Filesofen uut de 19. eywe]]
+# [[#Hedendaagse filesofen|Hedendaagske filosofen]]
+## [[#20e-eeuwse filesofen|20.-eywske filesofen]]
+## [[#21e-eeuwse filesofen|21.-eywske filesofen]]
 </div>
 
 == Filesofen uut de Oldheid ==
