/* Filesofen uut de Middeleywen */

--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -170,7 +170,7 @@ Dit is een lyste mes min of meyr bekende filesofen döär de eywen hean. Nen fil
 [[Zeno van Tarsus]] -
 [[Zhuangzi]]
 
-== Filesofen uut de Middeleeuwen ==
+== Filesofen uut de Middeleywen ==
 {{Abc|_2}}
 
 === A ===
