/* De Verlichingsfilosofen (17. en 18. eywe) */

--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -265,7 +265,7 @@ Disse moderne filesofen leefden van de [[Renaissance]] t/m [[19e eeuwe]]. Zi'j b
 === Z ===
 [[Huldrych Zwingli]]
 
-== De Verlichingsfilesofen (17e en 18e eeuwe) ==
+== De Verlichingsfilosofen (17. en 18. eywe) ==
 {{Abc|_4}}
 
 === B ===
