/* Filosofen uut de 19. eywe */

--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -327,7 +327,7 @@ Disse moderne filesofen leefden van de [[Renaissance]] t/m [[19e eeuwe]]. Zi'j b
 === W ===
 [[Christian Wolff (rechtsgeleerde)|Christian Wolff]]
 
-== Filosofen uut de 19e eeuw ==
+== Filosofen uut de 19. eywe ==
 {{Abc|_5}}
 
 === B ===
