--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -395,8 +395,8 @@ Disse moderne filesofen leefden van de [[Renaissance]] t/m [[19e eeuwe]]. Zi'j b
 [[Lady Victoria Welby]] -
 [[Chauncey Wright]]
 
-== Hedendaagse filesofen ==
-De filesofen uut de [[20e eeuwe|20e]] en [[21e eeuwe]] wöd ok wel de Hedendaagse filosofen enuumd in de huudige academische kringen. Momenteel ontstiet d'r 'n ni'je filesofiese periode, woar 't giet um 't (opni'j) bi'j mekare breng van de versnippering van de veurige tiedparken: de [[21e eeuwe]]. In disse streuming bint begrippen as [[Integrale theorie]] kenmarkend veur de filesoof zien of heur gedachtegoed.
+== Heydendaagske filosofen ==
+De filosofen uut de [[20e eeuwe|20.]] en [[21e eeuwe|21. Eywe]] wördet ouk wel de Heydendaagske filosofen enöömd in de hüdige akademiske kringen. Nu untsteyt der ne nye filosofiske periode, woar et geyt üm et (vannys) by mekare brengen van de versnippering van de vöärige tydparken: de [[21e eeuwe|21. eywe]]. In disse ströyming bint begrippen as [[Integrale theorie]] kenmarkend vöär de filosoof syne denkerye.
 
 == 20e-eeuwse filesofen ==
 {{Abc|_6}}
