--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -398,7 +398,7 @@ Disse moderne filesofen leefden van de [[Renaissance]] t/m [[19e eeuwe]]. Zi'j b
 == Heydendaagske filosofen ==
 De filosofen uut de [[20e eeuwe|20.]] en [[21e eeuwe|21. Eywe]] wördet ouk wel de Heydendaagske filosofen enöömd in de hüdige akademiske kringen. Nu untsteyt der ne nye filosofiske periode, woar et geyt üm et (vannys) by mekare brengen van de versnippering van de vöärige tydparken: de [[21e eeuwe|21. eywe]]. In disse ströyming bint begrippen as [[Integrale theorie]] kenmarkend vöär de filosoof syne denkerye.
 
-== 20.-eywse filosofen ==
+== 20.-eywske filosofen ==
 {{Abc|_6}}
 
 === A ===
