--- a/Lieste_met_filosofen.mw
+++ b/Lieste_met_filosofen.mw
@@ -623,7 +623,7 @@ De filosofen uut de [[20e eeuwe|20.]] en [[21e eeuwe|21. Eywe]] wördet ouk wel 
 === Z ===
 [[Slavoj Zizek]]
 
-== 21e-eeuwse filosofen ==
+== 21.-eywske filosofen ==
 {{Abc|_7}}
 
 === B ===
