*Empty MediaWiki Message*

--- a/Keltisk_krüüs.mw
+++ b/Keltisk_krüüs.mw
@@ -1,4 +1,4 @@
-Et '''keltisk krüüs''' is een symbool van et [[keltisk christendom]]. Et is et latynske krüüs, so as de [[Rooms-Katholieke Karke|katoliken]] gebruket, mar samen evoged med et olde heidense [[sünnekrüüs]].
+Et '''keltisk krüüs''' is een symbool van et [[keltisk christendom]]. Et is et latynske krüüs, so as de [[Rooms-Katholieke Karke|katoliken]] gebruket, mar samen evoged med et olde heidenske [[sünnekrüüs]].
 
 ==unstån==
 In de 4. en 5. eywe bint preadikers drok gangs ewesd med et töt et christendom krygen van de [[kelten]] in [[Ierlaand (eilaand)|Yrland]] en [[Groot-Brittannie|Grout-Brittanny]]. [[Sint-Patrick]], [[Sint-Declan]] en [[Sint-Columba]] bint hyr de groutste anstichters. Mar sy döden et anders as wat der by de germaanske nåbüren van ear geböäreden. Et gelöyv wördden neet med et swäärd ebrached, mar döär et händig an et christendom in de bestånde kulture en denkwysen te låten glyden. Olde gebruken wördden händig ümmeförmed med een christelike betekkenisse. Sülvs de druiden wördden neet direkts verbannen, mar kreygen een nye rolle in et christelike geböären. Hyrdöär wördden et keltisk christendom ouk een årdig andere förme van christendom as dat van ümliggende karken. So ouk wördden et olde heilige symbool, et sünnekrüüs, den vöär de sünne en et eywige leaven stünd. Dissen kreygen een kleine anpassing: de underste pout wördden ystys langer as de rest. So kreyg et de förme van et latynske krüüs. de betekkenisse bleyvden etsülvde. Want Christus is jå ouk de sünne en et eywige leaven? So seaden de preadikers.
