--- a/Uganda.mw
+++ b/Uganda.mw
@@ -5,30 +5,30 @@
 | woapn =Coat_of_arms_of_Uganda.svg
 | woapnartikel = 
 | lokasie = Uganda (orthographic projection).svg
-| sproaken = [[Engels]] (offisjeel), [[Swahili]], [[Luganda]], [[Runyoro]], [[Ruyankole]], [[Rukiga]], [[Luo]]
+| sproaken = [[Engels]]k (officieel), [[Swahili]], [[Luganda]], [[Runyoro]], [[Ruyankole]], [[Rukiga]], [[Luo]]
 | heufdstad = [[Kampala]]
 | geleuf = [[Christendom]], [[Islam]]
-| regeringsvörm = [[Republiek]]
+| regeringsvörm = [[Republiek|Republik]]
 | inwonners =  37.873.253 | dichtheid = 157,1
 | km2 = 241.038
 | breedtegroad = 1/00//N 
 | lengtegroad = 32/00//E 
 | region = UG
 | pctwater = 15,39
-| munteenheid = [[Ugandese Shilling]]  | valutakode = (UGX)
+| munteenheid = [[Ugandeeske Shilling]]  | valutakode = (UGX)
 | tiedzone = [[EAT]] ([[UTC]]+3)
 | volksleed = [[Oh Uganda, Land of Beauty]]
 | feestdag =
 | tld = ug | laandkode = UG | tel = 256 <small>(006 vanuut Tanzania en Kenia)</small>
 }}
 
-'''Uganda''' (offisjeyl '''Repüblyk Uganda''') is een lånd in [[Oost-Afrika]]. Et grenzet met de klokke met an [[Zuud-Soedan|Zuyd-Sudan]] in et noorden, [[Kenia]] in et noordoosten, [[Tanzania]] in et zuydwesten, [[Rwanda]] in et zuyden en [[Kongo-Kinsjasa]] in et westen. Uganda lig in de Afrikaanse [[Grote-merenstrekke]]. Et lig ok in et ströymgebeyd van den [[Niel|Nyl]] en hef een [[ævenårsklimaat]].
+'''Uganda''' (officiääl '''Republik Uganda''') is een land in [[Oost-Afrika]]. Et grenset med de klokke med an [[Zuud-Soedan|Süüd-Sudan]] in et noorden, [[Kenia]] in et noordoosten, [[Tansania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Grote-merenstrekke]]. Et ligt ok in et ströymgebeyd van den [[Niel|Nyl]] en hef een [[eavenårsklimaat]].
 
-De inwonners van Uganda warren [[jager-gadderaars]] töt ongevear 1700 of 2300 jår eleyden, tu as [[Bantu]]-volker op et zuyden an tröyken. Et lånd splitsen zik op [[9 oktober]] [[1962]] van et [[Vereanigd Keuninkriek|Verænigd Köninkryk]]. Den naam hebt ze van et olde köninkryk [[Buganda]]. Det beslöyg et züdelike deyl van et lånd, met inbegrip van de hüdige höyvdstad [[Kampala]]. Dårnöst warren der in Uganda nog veyr köninkryken: Ankole, Bunyoro-Kitara, Busoga en Togo. 
+De inwoaners van Uganda warren [[jager-gadderaars]] töt ongevear 1700 of 2300 jår eleaden, doo as [[Bantu]]-volker op et süden antröyken. Et land splitteden sik op [[9 oktober]] [[1962]] af van et [[Vereanigd Keuninkriek|Vereanigd Köninkryk]]. Den naam hebt se van et olde köninkryk [[Buganda]]. Dat beslöyg et südelike deyl van et land, med inbegrip van de hüdige höyvdstad [[Kampala]]. Dårnöäst warren der in Uganda nog veer köninkryken: Ankole, Bunyoro-Kitara, Busoga en Togo. 
 
-Nå öre ofsplitsing bröyk der ne börgeroorlog oet, wuurduyr der tynduuzenden uut de tyd kömmen en meyr as nen miljuun löy op de vlücht mossen. De onröste in et lånd böyd onder meyr [[Idi Amin]] nen kåns üm de macht te grypen. Hey ontwikkelen zik as eyne van de meyst gevreysde [[diktatuur|diktators]] van de wærld.
+Nå öäre afsplitsing bröyk der nen börgeroorlog uut, wårdöär der teendusenden uut de tyd köämen en meyr as nen miljoon lüde up de vlücht mussen. De unröste in et land böyd under meyr [[Idi Amin]] nen kans üm de macht te grypen. Hee untwikkelden sik as eyne van de meyst gevreasde [[diktatuur|diktators]] van de wearld.
 
-Uganda is nu ne repüblyk met 77 distrikte åwer veyr låndsstrekken. Den hüdigen presidænt is [[Yoweri Kaguta Museveni]], den as nå nen zesjårigen bosoorlog in [[1986]] an de macht köm. De offisjeyle språken zint [[Engels]] en [[Swahili|Swahyly]]. Et [[Luganda]] is ne språke dey as duyr et heyle laand köjerd wörd. Dårnöst gef et nog et [[Runyoro]], [[Royankole]], [[Rukiga]] en et [[Luo]].
+Uganda is nu ne republik med 77 distrikten oaver veer låndsstreaken. Den hüdigen president is [[Yoweri Kaguta Museveni]], den as nå nen sesjårigen bosoorlog in [[1986]] an de macht köäm. De officiäle språken sint [[Engels|engelsk]] en [[swahili]]. Et [[luganda]] is ne språke wat döär et heyle land köyerd wördet. Dårnöäst gevt et noch et [[runyoro]], [[royankole]], [[rukiga]] en et [[luo]].
 
 {{begin}}
 {{Dialekt|twd}}
