--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -1,4 +1,4 @@
-'''Rwanda''', (in et [[kinyarwanda]]: ''U Rwanda''), officiääl de '''Republik Rwanda''' [[swahili]]: ''Jamhuri ya Rwanda'', [[fraans|fransk]] ''République du Rwanda'') is een land in [[Midden-Afrika]] en [[Oost-Afrika]]. Et is eyne van de kleinste landen up et afrikaanske vasteland. Up een paar gråd südelik van den [[eavenår]] grenset Rwanda an [[Uganda]], [[Tansania]], [[Burundi]] en dee [[Demokratiske Republik van de Kongo]]. Rwanda ligt in de [[Afrikaanske Grote Mearenstreake]] en hevt flink wat bargen. Et ligt verdeyld tüsken bargen in et westen en [[savanne]] in et oosten en hevt årdig wat mearen. Et hevt een döärsnee klimaat töt [[subtropisk klimaat|subtropisk]], med twey natte en twey dröyge seisonen in et jår.
+'''Rwanda''', in et [[kinyarwanda]]: ''U Rwanda'', officiääl de '''Republik Rwanda''' ([[swahili]]: ''Jamhuri ya Rwanda'', [[fraans|fransk]]: ''République du Rwanda'') is een land in [[Midden-Afrika]] en [[Oost-Afrika]]. Et is eyne van de kleinste landen up et afrikaanske vasteland. Up een paar gråd südelik van den [[eavenår]] grenset Rwanda an [[Uganda]], [[Tansania]], [[Burundi]] en dee [[Demokratiske Republik van de Kongo]]. Rwanda ligt in de [[Afrikaanske Grote Mearenstreake]] en hevt flink wat bargen. Et ligt verdeyld tüsken bargen in et westen en [[savanne]] in et oosten en hevt årdig wat mearen. Et hevt een döärsnee klimaat töt [[subtropisk klimaat|subtropisk]], med twey natte en twey dröyge seisonen in et jår.
 
 De inwoaners van Rwanda sint in döärsnede jung en woanet vöärnamelik up 'n buur. Rwanda hevt eyne van de höygste bevolkingsdichtheden van Afrika. Rwandesen stammet van eyne kulturele språkgrup, de Bantarwanda, dee wear sint te verdeylen in drey undergrupen: [[hutu]]s, [[tutsi]]s en [[twa]]. De Twa sint een [[pygmeevolk]] dee as in et wold leyvet en höyret töt de eyrste inwoaners van Rwanda. Weatenskappers sint et nit eyns oaver de herkoamst van en verskillen tüsken de hutus en tutsis; wat gelöyvet dat de verskillen afleided sint van vrogere sociale [[kastestelsel|kastes]] binnen eyn volk, terwyl anderen meynet at de hutus en tutsis afsünderlik et land sint binnentrökken van verskillende steades. [[Christendom]] is et gröätste gelöyv in et land. De meystverspreide språke is [[Kinyarwanda]], engelsk en fransk sint wydtere officiäle språken. 
 
