*Empty MediaWiki Message*

--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -4,7 +4,7 @@ De inwoaners van Rwanda sint in döärsnede jung en woanet vöärnamelik up 'n b
 
 Den sovereinen ståt Rwanda hevt ne regeyring med president. 'n Hüdigen president is [[Paul Kagame]] van et [[Rwandeeske Patriotten Front]] (RPF) den as in [[2000]] an de macht köäm. Rwanda hevt rechtevoort eyne van de laegste gråden van korrupty in vergelyk med nåberlanden. Undanks dat meldet organisatys vöär de menskenrechten underdrükking van politike teagenstanders, intimidaty en inparking van vryheid van meyningsüting. Et land wörd al seet vöärkoloniale tyden regeyred döär ne strikte administrative machtsverdeyling. Der sint vyv provincys, wårvan as de grensen in 2006 trökken sind. Rwanda is eyne van de eanigste twey landen wår der ne meyrderheid an vrowlüde in et parlement sit.
 
-[[Jager-gadderaar]]s tröyken et gebeyd in tydens de [[steentied|steyn-]] en [[iezertied|ysertyd]]. Later köämen dår [[bantuvolker]] achteran. So untstünden eyrst stammen en dårnå köningkryken. Vanaf et midden van de [[18e eeuw|18de eywe]] was  et [[köninkryk Rwanda]] et starkste, wårby tutsiköningen anders oaverwünnen, de macht up eyne steade brachten en händig an begünnen med besluutvörming teagen de hutus. Düütskland koloniseyreden Rwanda in [[1884]] as underdeyl van [[Düütsk Oost-Afrika]], volget döär [[Belgie]], dee binnenvöllen in [[1916]] tydens den [[Eersten wearldoorlog|Eyrsten Wearldoorlog]]. Beide europääske landen bleyven de tutsis vöärtrekken. De hutus köämen dår in [[1959]] teagen [[Rwandeeske Revoluty|in upstand]]. Se slachteden tallose tutsis af en stichteden nen unafhankeliken hutuståt in [[1962]]. In [[1973]] verandereden et leiderskap döär nen ståtsgreyp, mär dårdöär verandereden der niks an et pro-hutubeleid. Et Rwandeeske Patriotten Front van de tutsis starteden den [[rwandeesken börgeroorlog]] in [[1990]]. De uplopende sociale spanningen vöörden töt de [[rwandeeske volkermoord]] van [[1994]], wårin hutu-extremisten tüsken de 500.000 en 1 miljoon tutsis en milder stemmede hutus vermoorden. De RPF makeden as winner een ende an de volkermoord.
+[[Jager-gadderaar]]s tröyken et gebeyd in tydens de [[steentied|steyn-]] en [[iezertied|ysertyd]]. Later köämen dår [[bantuvolker]] achteran. So untstünden eyrst stammen en dårnå köningkryken. Vanaf et midden van de [[18e eeuw|18de eywe]] was  et [[köninkryk Rwanda]] et starkste, wårby tutsiköningen anderen oaverwünnen, de macht up eyne steade brachten en händig an begünnen med besluutvörming teagen de hutus. Düütskland koloniseyreden Rwanda in [[1884]] as underdeyl van [[Düütsk Oost-Afrika]], volget döär [[Belgie]], dee binnenvöllen in [[1916]] tydens den [[Eersten wearldoorlog|Eyrsten Wearldoorlog]]. Beide europääske landen bleyven de tutsis vöärtrekken. De hutus köämen dår in [[1959]] teagen [[Rwandeeske Revoluty|in upstand]]. Se slachteden tallose tutsis af en stichteden nen unafhankeliken hutuståt in [[1962]]. In [[1973]] verandereden et leiderskap döär nen ståtsgreyp, mär dårdöär verandereden der niks an et pro-hutubeleid. Et Rwandeeske Patriotten Front van de tutsis starteden den [[rwandeesken börgeroorlog]] in [[1990]]. De uplopende sociale spanningen vöörden töt de [[rwandeeske volkermoord]] van [[1994]], wårin hutu-extremisten tüsken de 500.000 en 1 miljoon tutsis en milder stemmede hutus vermoorden. De RPF makeden as winner een ende an de volkermoord.
 
 De [[ekonomy]] van Rwanda had slim te lyden van de volkermoord, mär is anstarked. De meyste lüde leyvet van burenunderhold. [[Koffy]] en [[tea]] sint de vöärnaamste uutvoorprodukten. Turisme kümt ouk rap up en is nu de grötste brunne van butenlandse inkoamsten. As eyne van de twey eanigste landen wår as [[barggorilla]]'s veilig besochted köänt worden, vangt Rwanda hoge inkoamsten van upsporingsbiljetten. Musik en dans höyret by et kulturele leyven van Rwanda, vöäral [[slagwark|trummen]] en de slim vöäraf uutdachte ''intore''-dans. Döär et heyle land maket lüde traditionele künst en handwarken, wåründer ''[[imigongo]]'', ne unike vörm van kunst med dryte van koobeeste.
 
