--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -4,7 +4,7 @@
 | vlagartikel = Vlagge van Rwanda
 | woapn =Coat_of_arms_of_Rwanda.svg
 | woapnartikel = 
-| lokasie = 500px-Location_Rwanda_AU_Africa.svg.png
+| lokasie = 500px-Location_Rwanda_AU_Africa.svg
 | sproaken = [[Kinyarwanda]], [[Engels]]k , [[Fransk]], [[Swahili]]
 | heufdstad = [[Kigala]]
 | geleuf = [[Christendom]], [[Islam]]
