*Empty MediaWiki Message*

--- a/Wekke.mw
+++ b/Wekke.mw
@@ -1,27 +1,27 @@
-'n '''Wekke''' is in d' hudige tiedsrekkening de tied van zeuven [[dag|dagen]]. d' Eersten dag van de wekke in [[christendom|kristlike]] en de [[jodendom|jeudse]] [[kelender]] is 'n moandag, mar mangs wöd 'n zundag eziene as d' eersten dag van de wekke. 
+Ne '''weake''' is in de hüdige tydsreakening de tyd van söäven [[dag|dage]]. Den eyrsten dag van de weake in [[christendom|christelike]] en de [[jodendom|jöydske]] [[kelender|kalender]] is den måndag, mar mangs wörd den sündag eseen as den eyrsten dag van de weake. 
 
-De zeuven dagen van de wekke bint:
-* [[maondag|moandag]] - enuumd noar de [[Maone (eerde)|moane]]
-* [[dinsdag]] - enuumd noar de Noordsen god [[Tyr|Thing]] ([[Tubaantn]] numen n god ''Thingcsus'', Dingsdag)
-* [[woonsdag|woensdag]] - enuumd noar de Germoansen god [[Woden]]
-* [[donderdag]] - enuumd noar de Noordsen god [[Donar]]
-* [[vriedag|vri-jdag]] - enuumd noar de Noordse godinne [[Freya|Frija]]
-* [[zaoterdag|zoaterdag]] - enuumd noar de Romeinsen god [[Saturnus (god)|Saturnus]]
-* [[zundag]] - enuumd noar de [[zunne]]
+De söäven dage van de weake bint:
+* [[maondag|måndag]] - enöömd når de [[Maone (eerde)|måne]]
+* [[dinsdag|dingseldag]] - enöömd når den noordsken god [[Tyr|Thing]] ([[Tubaantn|tubanten]] nöömden den god ''Thingcsus'', Dingsdag)
+* [[woonsdag|woonsdag]] - enöömd når den germaansken god [[Woden]]
+* [[donderdag|dunderdag]] - enöömd når den noordsken god [[Donar]]
+* [[vriedag|vrydag]] - enöömd når den noordske godinne [[Freya|Frya]]
+* [[zaoterdag|såterdag]] - enöömd når den romeinsken god [[Saturnus (god)|Saturnus]]
+* [[zundag|sündag]] - enöömd når de [[zunne|sünne]]
 
-== 1 wekke ==
-* 7 dagen
+== 1 weake ==
+* 7 dage
 * 168 uur 
-* 10.080 menuten 
-* 604.800 secondes
-* 23% van 'n gemiddelde moand
+* 10.080 minuten 
+* 604.800 sekondes
+* 23% van een gemiddelde månd
 
-== Nedersaksies==
-[[Sallaands]]: ''weke''
+== Neadersassisk==
+[[Sallaands|Sallandsk]]: ''weke''
 
-[[Vechtdals]]: ''wekke''
+[[Vechtdals|Vechtdalsk]]: ''wekke''
 
-[[Tweants]]: ''wek''
+[[Tweants|Twentsk]]: ''wek''
 
-{{Dialekt|sdz}}
+{{Dialekt|act}}
 [[Kategorie:Tied]]
