/* Wette van beparkte meddinging */

--- a/Ishmael_(roman).mw
+++ b/Ishmael_(roman).mw
@@ -16,7 +16,7 @@ citaten kumt uut et book vord:
 Daniel Quinn düt ouk noch et genesisverhaal uutleggen so as hy dat söt. En hy düt een bülte probleymen in syn wark kummen, wat een menske uutricht, mar hy kümt ouk wear med een uplössing. Hy hevt et book so eskreaven dat et u wal an et prakkidenken an set.
 
 ==Wette van beparkte meddinging==
-Ismaël löt syn leyrling een koppel dagen prakkidenken oaver een wette dee de Nemmers oavertread, een wette de wal nå eleavd wörd döär de Låters-volker (en alle andere deren). Dan kümt de leyrling med dree dinge ansetten wat de Nemmers wál doot, mar de Låters neet. 
+Ismaël löt syn leyrling een koppel dagen prakkidenken oaver een wette dee de Nemmers oavertreadet, een wette dee wal nå eleaved wörd döär de Låters-volker (en alle andere deren). Dan kümt de leyrling med dree dinge ansetten wat de Nemmers wál doot, mar de Låters neet. 
 
 Din gevt een name an disse (natuur)wette:
 
