/* De Wilde Jacht */

--- a/Juul.mw
+++ b/Juul.mw
@@ -17,7 +17,7 @@ Et woord “juul” (kümt van et engelse "yule") sülv is oorold en sol "weel" 
 Deur den winter hen, mar bi-jnoa aaltied tiedens den twalf Joelnächte, verschennen [[Wodan|Woden]] met zienen leger van de Doden, op de [[Wilde Jacht]]. 
 De doden wukke metdeun an de Wilde Jacht waren zowel keerls, vrouwluu en kinders, denne waren bi-jnoa aaltied gewelddoadig an heur eande kommen ('störven in de stried'). Manks wördden de kiekers noar 't taffereel met-ezeugen in de Jacht en mossen dan vake joaren metdoe. De Wilde Jacht jeug op dn wölf [[Fenrir]] (betekkend: 'Vretter') din de zunne verslön woardeur dr nacht kwaam. 
 
-Vake göngen luu 't kebaal van de stoet noa spöllen deur onder aander 't ossenhoornbloazen (noe gebruukt as 'n [[Mirreweenterhoorn|Midwinterhoorn]]), umme zo heur steun an de jagers te betugen en de Wilde Jacht te verstarken. Mannenbunden güngen in dee tyd sichsülven den kop swart maken med root, tröyken derenhüden ümme en döäden hoarns up den kop. So stelden sy de douden vöär, en krachten uut de natuur. Sy güngen dan de busken en de gouwen döär, maakten kabaal med kettens en bellen, en smeareden vrouwlüde under de zwarte root. Et root stelden de doud en de vrüchtbaarheid vöär. 
+Vake göngen luu 't kebaal van de stoet noa spöllen deur onder aander 't ossenhoornbloazen (noe gebruukt as 'n [[Mirreweenterhoorn|Midwinterhoorn]]), umme zo heur steun an de jagers te betugen en de Wilde Jacht te verstarken. Mannenbunden güngen in dee tyd sichsülven den kop swart maken med root, tröyken derenhüden ümme en döäden hoarns up den kop. So stelden sy de douden vöär, en krachten uut de natuur. Sy güngen dan de busken en de gouwen döär, maakten kabaal med kettens en bellen, en smeareden vrouwlüde under de swarte root. Et root stelt de doud en de vrüchtbaarheid vöär. 
 
 Disse doden zollen ooit de leste stried tegen 't kwoad mossen vechten, de [[Ragnarök]] (eandtied). As men tiedens dissen tied 'n bezuuk kriegen zol van Woden met zienen Wilde Jacht en de deure was eslötten, konnen men op kommend oongluk wachten. 'n Bezuuk mos gien onheil betekkenen. Nen stuk grond woarop de Wilde Jacht haren elaand was goed vruchtbaar ewördden. Men zetten dan ok gescheanken in den vörme van etten en draank veur heur kloar. Den grönde woaroaver zi-j vleugen waren vruchtbaarder en de oogsten better. De doden wukke Woden anvoerd kriegt in dissen tied de kaanse umme heur Sibben te bezuuken en heur geluk en zegen te bezörgen.
 
