*Empty MediaWiki Message*

--- a/Juul.mw
+++ b/Juul.mw
@@ -1,6 +1,10 @@
 [[Bestaand:Chambers Yule Log.png|thumb|250px|Et Juulblok wördt döär kearls uut et wold ehaald, de vrouwe van et huus (of dochter) stekt et blok an med holtskole van et juulblok van et vöärige jår, 1832]]
-Et '''juulfeest''', of de '''Twaalv Nachten''', is et [[Germanen|germaanske]] [[zunnewende|wintersünnewende]]feest. Et duurt twaalv dagen, wårvan de körtsen dag up et jår, in uns [[gregoriaanse kelender|gregoriaanse kalenderrekkenen]] [[21 desember]], et belangryksten is. 
 
+'''Juul''' of '''Midwinter''' bint de namen vöär et germaanske feest dat de [[zunnewende|wintersünnewende]] vyrt. Et duurt twaalv nachten en darteen dagen, en dårümme wörd et feest ouk wal med de ''Twaalv Nachten'' anedüded. Altyd begünt et up de körste dag van et jår, wat in unse [[gregoriaanse kelender|gregoriaanske kalenderreakenen]]  [[21 december]] is. Vanof dissen dag stopten vöär de germanen vöär twaalv nachten de tyd, ümme up 1 januari wear in de nye tyd te kummen wår as de sünne sötyns an wearümme kümt.
+
+==Woordherkumts==
+
+==
 
 
 
