--- a/Juul.mw
+++ b/Juul.mw
@@ -12,7 +12,7 @@ Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med ro
 
 In latere verhalen bint disse lüde noch ehöäged as '''De Wilde Jacht'''. 
 
-===symboliek===
+===symbolik===
 Et burenvolk had van vöärend al syn oogst binnen ehaled, et vleisk in esolted en de deakentyns ebreied. Sy mosden de winter mar döär seen te kummen. Ümdat et kold en nat is buten, was et logisk dat sy binnen et was geselliger maakten. Med lichtyns en dennentakken. Want dennentakken blyvet et heyle jår gröön, en dat düt in de kolde dage u der an höägen dat et ooit wear gröön buten wörd. Et licht düt u höagen når de warmte van de sünne in et [[summer]]. Tydens disse twaalv dage wördden der dan ouk vöäl groute vüren an estöäken, en de heyle tyd verdan an-eholden. Want solange as den sünne neet skent, dan mütte wy et sülv mar doon. Nu noch wörd der in de noordske landen ''juulblokken'' ehakked en de heyle karsttyd up-estoaked. In de westerske landen heb y noch ait vöäle midwintervüren.
 
 ===Woordherkumts===
